--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Cat Collector</title>
 </head>
 <body>
-    <h1> Cat Collector</h1>
+    <h1> Cat Collector Contact </h1>
     <hr />
-    <p>Welcome to Cat Collector</p>
+    <p>
+        Contact us at catcollector@gmail.com
+    </p>
 </body>
 </html>
